# WaterMarkAndroid

./: .gitignore  README.md  settings.gradle
G7/: CMakeLists.txt  CvxText.cpp  WaterMark.java  build.gradle  watermark.cpp
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/android/watermark/: Assert.java  CopyAssetsTask.java  Factory.java  FactoryImpl.java  FileUtil.java  LocationManager.java  MainActivity.java  NameThreadFactory.java  PictureCallback.java  SurfacePreview.java  TimeUtil.java  VideoGather.java  WaterMark.java  WaterMarkApplication.java  WaterMarkJni.java  WaterMarkSurfaceView.java  WaterMarkTask.java  WaterMarkWrap.java  YuvToBitmap.java
app/src/main/java/com/baidu/location/service/: LocationService.java  Utils.java
app/src/main/jni/: Application.mk_bak  com_android_watermark_WaterMarkJni.cpp  com_android_watermark_WaterMarkJni.h
app/src/main/jni/watermark/: watermakr.h  watermark.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
freetype/: CMakeLists.txt  build.gradle
freetype/src/androidTest/java/com/sprd/freetype/: ExampleInstrumentedTest.java
freetype/src/main/: AndroidManifest.xml
freetype/src/main/java/com/sprd/freetype/: FreeTypeJni.java
freetype/src/main/jni/: Android.mk  Application.mk  com_sprd_freetype_FreeTypeJni.cpp  com_sprd_freetype_FreeTypeJni.h  log.h
freetype/src/main/jni/freetype/lib/: libfreetype.la
freetype/src/main/jni/freetype/lib/pkgconfig/: freetype2.pc
freetype/src/main/jni/include/: CvxText.h
freetype/src/main/jni/include/freetype/config/: ftoption.h
freetype/src/main/jni/src/: CvxText.cpp
freetype/src/main/res/values/: strings.xml
freetype/src/test/java/com/sprd/freetype/: ExampleUnitTest.java
opencv_java/: build.gradle
opencv_java/src/androidTest/java/org/opencv/: ExampleInstrumentedTest.java
opencv_java/src/main/: AndroidManifest.xml
opencv_java/src/main/res/values/: strings.xml
